--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
   <header>
-    <div class="logo">Cynero</div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Contact</a>
-    </nav>
+  <div class="logo">
+    <img src="https://assets.onecompiler.app/43hmmw5s4/43hmmvqjx/IMG_3107.jpeg" alt="Cynero Logo">
+  </div>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </nav>
   </header>
 
   <section class="hero">
