--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
   <div class="logo">
-    <img src="IMG_3107.jpeg" alt="Cynero Logo">
+    <img src="IMG_3115.png" alt="Cynero Logo">
   </div>
   <nav>
     <a href="#">Home</a>
