--- a/index.html
+++ b/index.html
@@ -7,25 +7,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-  <div class="logo">
-    <img src="IMG_3115.png" alt="Cynero Logo">
+  <!-- 背景视频 -->
+  <video autoplay muted loop id="bg-video">
+    <source src="background.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- 内容覆盖层 -->
+  <div class="content">
+    <header>
+      <div class="logo">
+        <img src="logo.png" alt="Cynero Logo">
+      </div>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+
+    <section class="hero">
+      <h1>Empowering Software Innovation</h1>
+      <p>We build reliable, scalable, and future-ready solutions.</p>
+    </section>
+
+    <footer>
+      <p>&copy; 2025 Cynero. All rights reserved.</p>
+    </footer>
   </div>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Contact</a>
-  </nav>
-  </header>
-
-  <section class="hero">
-    <h1>Empowering Software Innovation</h1>
-    <p>We build reliable, scalable, and future-ready solutions.</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Cynero. All rights reserved.</p>
-  </footer>
 </body>
 </html>
