--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="content">
     <header>
       <div class="logo">
-        <img src="logo.png" alt="Cynero Logo">
+        <img src="IMG_3115.png" alt="Cynero Logo">
       </div>
       <nav>
         <a href="#">Home</a>
