--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- 背景视频 -->
   <video autoplay muted loop id="bg-video">
-    <source src="background.mp4" type="video/mp4">
+    <source src="3129671-uhd_3840_2160_30fps.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
