--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,8 @@
       </div>
       <nav>
         <a href="index.html">Home</a>
-        <a href="#">About</a>
+        <a href="about.html">About</a>
         <a href="#">Services</a>
-        <a href="contact.html">Contact</a>
       </nav>
     </header>
 
