--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         <img src="IMG_3115.png" alt="Cynero Logo">
       </div>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="#">Services</a>
-        <a href="contact.html">Contact</a>
       </nav>
     </header>
 
