--- a/about.html
+++ b/about.html
@@ -25,8 +25,11 @@
       </nav>
     </header>
 
-    <section class="contact">
-      <h1>Contact: cynero@gmail.com</h1>
+    <section class="about">
+      <h1>Owner:</h1>
+      <p>Bernice Yii</p>
+      <p>Justin Lim</p>
+      <p>Delon Lee</p>
     </section>
 
     <footer>
