--- a/about.html
+++ b/about.html
@@ -25,11 +25,13 @@
       </nav>
     </header>
 
-    <section class="about">
+    <section class="hero">
       <h1>Owner:</h1>
-      <p>Bernice Yii</p>
-      <p>Justin Lim</p>
-      <p>Delon Lee</p>
+      <p>
+        Bernice Yii
+        Justin Lim
+        Delon Lee
+      </p>
     </section>
 
     <footer>
