--- a/about.html
+++ b/about.html
@@ -27,11 +27,9 @@
 
     <section class="hero">
       <h1>Owner:</h1>
-      <p>
-        Bernice Yii
-        Justin Lim
-        Delon Lee
-      </p>
+      <p>Bernice Yii</p>
+      <p>Justin Lim</p>
+      <p>Delon Lee</p>
     </section>
 
     <footer>
