--- a/about.html
+++ b/about.html
@@ -18,11 +18,23 @@
       <div class="logo">
         <img src="IMG_3115.png" alt="Cynero Logo">
       </div>
-      <nav>
+
+      <!-- Hamburger icon for mobile -->
+      <div class="hamburger" onclick="toggleSidebar()">☰</div>
+
+      <!-- Desktop navigation -->
+      <nav class="nav-links">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="#">Services</a>
       </nav>
+
+      <!-- Sidebar (mobile navigation) -->
+      <div class="sidebar" id="sidebar">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="#">Services</a>
+      </div>
     </header>
 
     <section class="hero">
