--- a/about.html
+++ b/about.html
@@ -48,5 +48,12 @@
       <p>&copy; 2025 Cynero. All rights reserved.</p>
     </footer>
   </div>
+
+<script>
+  function toggleSidebar() {
+    document.getElementById("sidebar").classList.toggle("active");
+  }
+</script>
+  
 </body>
 </html>
