--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
     </header>
 
     <section class="hero">
-      <h1>Empowering Software Innovation</h1>
-      <p>We build reliable, scalable, and future-ready solutions.</p>
+      <h1>Welcome to Bernice website :)</h1>
+      <p></p>
     </section>
 
     <footer>
-      <p>&copy; 2025 Cynero. All rights reserved.</p>
     </footer>
   </div>
 
