--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <section class="hero">
-      <h1>Welcome to Bernice website :)</h1>
+      <h1>Welcome to Cynero</h1>
       <p></p>
     </section>
 
