--- a/about.html
+++ b/about.html
@@ -36,8 +36,11 @@
     </header>
 
     <section class="hero">
-      <h1>Owner:</h1>
-      <p>Bernice Yii</p>
+      <h1>Owner</h1>
+      <p>————————————————————————</p>
+      <p>Name: Bernice Yii</p>
+      <p>Contact: 60124488022</p>
+      <p>Email: berniceyii11@gmail.com </p>
     </section>
 
     <footer>
