--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- 背景视频 -->
   <video autoplay muted loop id="bg-video">
-    <source src="3129671-uhd_3840_2160_30fps.mp4" type="video/mp4">
+    <source src="home page background.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
@@ -18,7 +18,7 @@
   <div class="content">
     <header>
       <div class="logo">
-        <img src="IMG_3115.png" alt="Cynero Logo">
+        <img src="final.png" alt="FurEver Logo">
       </div>
 
       <!-- Hamburger icon for mobile -->
@@ -27,19 +27,27 @@
       <!-- Desktop navigation -->
       <nav class="nav-links">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="pets.html">Pets</a>
+        <a href="calendar.html">Calendar</a>
+        <a href="map.html">Map</a>
+        <a href="profile.html">Profile</a>
+        <a href="">Login/Sign up</a>
       </nav>
 
       <!-- Sidebar (mobile navigation) -->
       <div class="sidebar" id="sidebar">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="pets.html">Pets</a>
+        <a href="calendar.html">Calendar</a>
+        <a href="map.html">Map</a>
+        <a href="profile.html">Profile</a>
+        <a href="">Login/Sign up</a>
       </div>
     </header>
 
     <section class="hero">
-      <h1>Welcome to Cynero</h1>
-      <p></p>
+      <h1>Welcome to FUREVER</h1>
+      <p>“Where Every Pet's Story Lives Forever.”</p>
     </section>
 
     <footer>
